# pigeon-evals

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  clients.py  embed_skeleton.py  main.py  preprocessing.py  processing.py  pyproject.toml  requirements.txt  runner.py
.docs/: Claude-Architecture.md
.sql/: documents.db
artifacts/: pca_512.joblib  sec_pca_512.joblib
configs/: eval.yml  general.yml  sample.yml  test.yml  tf-idf.yml
docs/: AGENT_TESTING.md  parser.md
evals/configs/: metadata.yml  sample.yml  sample_hf.yml  test.yml  test_hf.yml
evals/src/: main.py
evals/tests/: todo
mcp_server/: __init__.py  tools.py
mcp_server/clients/: __init__.py  embedding.py  pca.py  sql_db.py  vector_db.py
mcp_server/types/: __init__.py
mcp_server/visuals/: charts.py  table.py
preprocess/: extraction.py  metadata.py
preprocessing/: extraction.py  metadata.py
processing/: __main__.py  extraction.py
src/: main.py
src/embedder/: base.py
src/loader/: data_loader.py
src/models/: __init__.py  args.py  documents.py
src/parser/: __init__.py  base.py  builder.py  parser.py  regex_parser.py
src/processor/: __init__.py  regex_processor.py  tables_processor.py
src/runner/: __init__.py  base.py  embedder_runner.py  evaluation_runner.py  parser_runner.py  processor_runner.py  report_runner.py  storage_runner.py
src/utils/: __init__.py  config_manager.py  (+3 more)
tests/: README.md  test_agent_tool_usage.py  test_chart_visualizations.py  test_mcp.py  test_pca_loader.py  test_table_visualization.py  test_toc_processor.py  test_vector_search_relevancy.py
tools/: __init__.py
utils/: pca.py
(+118 files in other folders)
